mark as printed

--- a/app/templates/fixtures/header.html
+++ b/app/templates/fixtures/header.html
@@ -19,6 +19,8 @@
                         class="nav-link px-2 link-secondary">Overview</a></li>
                 <li><a href="{% url 'cheques:list' %}"
                         class="nav-link px-2 link-dark">Cheques</a></li>
+                <li><a href="{% url 'cheques:create' %}"
+                        class="nav-link px-2 link-dark">Cashier</a></li>
 
             </ul>
 
