--- a/app/templates/cheques/cheque_list.html
+++ b/app/templates/cheques/cheque_list.html
@@ -11,7 +11,9 @@ Cheques -
 <h1>Cheques</h1>
 <div class="col-8 mx-auto">
     <div class="container my-5 text-end">
-        <a title="add cheque" class="fs-3 text-dark" href="{% url 'cheques:create' %}"><i
+        <a title="add cheque"
+            class="fs-3 text-dark"
+            href="{% url 'cheques:create' %}"><i
                 class="bi bi-plus-circle"></i></a>
     </div>
     <table class="table table-hover table-sm"
@@ -42,10 +44,10 @@ Cheques -
                         class="text-info fs-5"><i
                             class="bi bi-info-circle"></i></a>
                     <a title="mark as printed"
-                        href="{{ cheque.mark_as_printed }}"
+                        href="{% url 'cheques:mark-printed' cheque.pk %}"
                         class="text-success fs-5 mx-1"><i
                             class="bi bi-printer"></i></a>
-                  
+
                 </td>
             </tr>
             {% endfor %}
