--- a/app/templates/cheques/cheque_list.html
+++ b/app/templates/cheques/cheque_list.html
@@ -8,7 +8,7 @@ Cheques -
 
 
 {% block content %}
-<h1>Cheques</h1>
+<h1>Cheques ({{ object_list.count }})</h1>
 <div class="col-8 mx-auto">
     <div class="container my-5 text-end">
         <a title="add cheque"
