--- a/app/templates/cheques/cheque_printed_user_list.html
+++ b/app/templates/cheques/cheque_printed_user_list.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 <div class="shadow p-5">
-    <h1 class="text-center">Printed</h1>
+    <h1 class="text-center">Printed ({{cheques_printed.count}})</h1>
     <hr>
     <br>
 
